Add user tweets
